[package]
name = "p-speed"
version = "0.1.2"
edition = "2021"
description = "Benchmark real P-Token compute units on Solana — SIMD-0266 in action"
authors = ["anmol0b"]
license = "MIT"
repository = "https://github.com/anmol0b/p-speed"
homepage = "https://github.com/anmol0b/p-speed"
readme = "README.md"
keywords = ["solana", "p-token", "benchmark", "spl", "cli"]
categories = ["command-line-utilities"]
exclude = [".github/", "results.json"]

[[bin]]
name = "p-speed"
path = "src/main.rs"

[dependencies]
# Solana core
solana-sdk        = "1.18"
solana-client     = "1.18"
solana-transaction-status = "1.18"

# SPL Token — no-entrypoint so we can call it as a client
spl-token                  = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0", features = ["no-entrypoint"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Output
colored     = "2"
comfy-table = "7"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Utilities
anyhow      = "1"
shellexpand = "3"
